unpackaged/main/default/objects/RecordType_Test_Object__c/RecordType_Test_Object__c.object-meta.xml
<CustomObject>
	<label>RecordType Test Object</label>
	<nameField>
		<displayFormat>Awesome-{0}</displayFormat>
		<label>RecordType Test Object Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>RecordType Test Objects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>