unpackaged/main/default/objects/RecordType_Test_Object__c/fields/Abnormal_Awesome_Picklist_Field__c.field-meta.xml
<CustomField>
	<fullName>Abnormal_Awesome_Picklist_Field__c</fullName>
	<label>Abnormal/Awesome Picklist Field</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>1</fullName>
			</value>
			<value>
				<fullName>2</fullName>
			</value>
			<value>
				<fullName>3</fullName>
			</value>
			<value>
				<fullName>4</fullName>
			</value>
			<value>
				<fullName>5</fullName>
			</value>
			<value>
				<fullName>Abnormal/Awesome PicklistValue1</fullName>
			</value>
			<value>
				<fullName>Abnormal/Awesome PicklistValue2</fullName>
			</value>
			<value>
				<fullName>Abnormal/Awesome PicklistValue3</fullName>
			</value>
			<value>
				<fullName>Abnormal/Awesome PicklistValue4</fullName>
			</value>
			<value>
				<fullName>Abnormal/Awesome PicklistValue5</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>