unpackaged/main/default/objects/RecordType_Test_Object__c/fields/Dependent_Value_Set__c.field-meta.xml
<CustomField>
	<fullName>Dependent_Value_Set__c</fullName>
	<label>Dependent Value Set</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>ValueSet_Picklist__c</controllingField>
		<restricted>true</restricted>
		<valueSetName>Number_based_global_value_set</valueSetName>
	</valueSet>
</CustomField>