unpackaged/main/default/objects/RecordType_Test_Object__c/fields/Normal_Picklist__c.field-meta.xml
<CustomField>
	<fullName>Normal_Picklist__c</fullName>
	<label>Normal Picklist</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>1</fullName>
			</value>
			<value>
				<fullName>2</fullName>
			</value>
			<value>
				<fullName>3</fullName>
			</value>
			<value>
				<fullName>4</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>