unpackaged/main/default/objects/RecordType_Test_Object__c/fields/ValueSet_Picklist__c.field-meta.xml
<CustomField>
	<fullName>ValueSet_Picklist__c</fullName>
	<label>ValueSet Picklist</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetName>Number_based_global_value_set</valueSetName>
	</valueSet>
</CustomField>