unpackaged/main/default/objects/RecordType_Test_Object__c/recordTypes/Abnormal_Awesome_Recordtype.recordType-meta.xml
<RecordType>
	<fullName>Abnormal_Awesome_Recordtype</fullName>
	<active>true</active>
	<label>Abnormal/Awesome Recordtype</label>
</RecordType>