unpackaged/main/default/objects/RecordType_Test_Object__c/recordTypes/Normal_Record_Type.recordType-meta.xml
<RecordType>
	<fullName>Normal_Record_Type</fullName>
	<active>true</active>
	<label>Normal Record Type</label>
</RecordType>